# sherlog

./: .gitignore  Makefile  dune-project  example.py  mnist.py  readme.md  setup.py  sherlog.opam  watson.opam
examples/: ancestry.sl  ant-policy.py  coin-ball.py  coin-flip.py  flip.sl  lists.sl  mnist-addition.py  mnist.sl  model-selection.py  modelselection.sl  nn.sl  problem.json  problog.sl  query.json  readme.md  reviewers.py  simple-normal.py  smokers.sl  sort.py  truncated-gaussian.py  undercounting.sl  vae.sl
examples/baseball/: BBall.ipynb
examples/basic/: ancestry.sl  flip-prior.sl  flip.sl  model-selection.sl
examples/burglary/: evaluate.py  source.sl
examples/classic-smokers/: .gitignore  Makefile  README.md  evaluate.py  generation.py  model.sl  pli.py  temp.sl  train.py
examples/classical/: README.md  lda.sl
examples/coin-ball/: __main__.py  data.py  evaluate.py  modules.py  program.py
examples/coin-flip/: baseline.py  evaluate.py  source.sl
examples/deepproblog/: README.md
examples/flip/: .gitignore  Makefile  README.md  flip.sl  flip2.sl  train.py  visualize.py
examples/flip-better/: .gitignore  Makefile  flip-better.sl  train.py  visualize.py
examples/grad-variance/: .gitignore  Makefile  train.py  visualize.py
examples/grammar-vae/: gvae.py  lists.sl  train.py
examples/mnist-addition/: evaluate.py  (+1 more)
lib/: .merlin  dune
schemas/: pipeline.schema.json
sherlog/: __init__.py  __main__.py  config.py  instrumentation.py  logs.py  problem.py  visualization.py
sherlog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+355 files in other folders)
